// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/bitcoin/v1/address > Get address balance 1`] = `
{
  "address": "tb1pusqtndhyt8mcrggngd0lmah4xshc0aa8vpfsttvtzxd0hxhkrwns7977yu",
  "available_satoshi": 90738317,
  "dust_satoshi": 0,
  "pending_satoshi": 1426,
  "rgbpp_satoshi": 6552,
  "satoshi": 90738317,
  "total_satoshi": 90746295,
  "utxo_count": 17,
}
`;

exports[`/bitcoin/v1/address > Get address balance with min_satoshi param 1`] = `
{
  "address": "tb1pusqtndhyt8mcrggngd0lmah4xshc0aa8vpfsttvtzxd0hxhkrwns7977yu",
  "available_satoshi": 90737437,
  "dust_satoshi": 7432,
  "pending_satoshi": 1426,
  "rgbpp_satoshi": 6552,
  "satoshi": 90737437,
  "total_satoshi": 90746295,
  "utxo_count": 17,
}
`;
